# MINER-simulation

./: .gitignore  CMakeLists.txt  CRY_file  MINER_simulation.cc  README.md  run1.mac  vis.mac
.run/: MINER.run.xml
data/2021_04_23/: check_integrity.py  diff_10_30.py  difference_between_10x10_and_30x30.html
data/2021_04_23/with_wall/: Energy.txt  README.txt
data/2021_04_23/with_wall_30/: CRY_file  CRY_output.csv  Energy.txt  README.txt
data/2021_04_23/without_wall/: CRY_file  CRY_output.csv  Energy.txt  README.txt
include/: ActionInitialization.hh  Analyser.hh  B1ActionInitialization.hh  B1Analyser.hh  B1DetectorConstruction.hh  B1EventAction.hh  B1PrimaryGeneratorAction.hh  B1SteppingAction.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  Analyser.cc  B1ActionInitialization.cc  B1Analyser.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  B1SteppingAction.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
